fixed: repeat with field-list and parent group with field-list does not show "+" button and both groups fail to collapse,
https://github.com/kobotoolbox/enketo-express/issues/878

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -184,7 +184,8 @@ $media-margin: 10px;
                 top: 0;
             }
             ~ * {
-                display: none;
+                // !important is added to battle pages rules
+                display: none !important;
             }
         }
     }
